tests/invalid/nested_function_missing_annotation/main.py
def main() -> None:
    def inner(x) -> int:
        return x

    y: int = inner(1)
    assert y == 1
